tests/vendor/valid/simple/bitwise_shiftl_var.c
//expect 24
//tags: simple
int main() {
    int x = 3;
    return x << 3;
}