tests/vendor/invalid/semantics/compound_assign_function_lhs.c
//tags: functions
int x();

int main() {
    x += 3;
    return 0;
}